tests/ui/not-zeroize-on-drop/zeroize-on-drop.stderr
error: requires crate feature `zeroize-on-drop`
 --> tests/ui/not-zeroize-on-drop/zeroize-on-drop.rs:7:30
  |
7 | #[derive_where(ZeroizeOnDrop(no_drop))]
  |                              ^^^^^^^
